<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_the_dog_which_belong_to_breed"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/iv_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:contentDescription="@string/image_of_dog_one"
            android:src="@drawable/placeholder" />

        <ImageView
            android:id="@+id/iv_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:contentDescription="@string/image_of_dog_two"
            android:src="@drawable/placeholder" />

        <ImageView
            android:id="@+id/iv_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:contentDescription="@string/image_of_dog_three"
            android:src="@drawable/placeholder" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>